objects/Market_Intelligence__c.object
<CustomObject>
    <description>Place where all information coming from market (customers, competitors, media, sales, etc...) is reconsolidate in order to estimate market trend.</description>
    <fields>
        <fullName>Account__c</fullName>
        <deleteConstraint>SetNull</deleteConstraint>
        <label>Account</label>
        <referenceTo>Account</referenceTo>
        <relationshipLabel>Market Intelligence</relationshipLabel>
        <relationshipName>Market_Intelligence</relationshipName>
        <type>Lookup</type>
    </fields>
    <fields>
        <fullName>Comments_on_Market_trend_outlook__c</fullName>
        <description>Key information that relate to our business/market.</description>
        <inlineHelpText>Please do NOT copy and paste large pieces of text from search engines.  Please enter clear and concise information relating to our business/market.</inlineHelpText>
        <label>Comments on Market trend outlook</label>
        <length>20000</length>
        <type>Html</type>
    </fields>
    <fields>
        <fullName>Country__c</fullName>
        <label>Country</label>
        <type>Picklist</type>
        <valueSet>
            <valueSetDefinition>
                <sorted>true</sorted>
                <value>
                    <fullName>Afghanistan</fullName>
                </value>
                <value>
                    <fullName>Albania</fullName>
                </value>
                <value>
                    <fullName>Algeria</fullName>
                </value>
                <value>
                    <fullName>All countries</fullName>
                </value>
                <value>
                    <fullName>Armenia</fullName>
                </value>
                <value>
                    <fullName>Australia</fullName>
                </value>
                <value>
                    <fullName>Austria</fullName>
                </value>
                <value>
                    <fullName>Azerbaijan</fullName>
                </value>
                <value>
                    <fullName>Bahrain</fullName>
                </value>
                <value>
                    <fullName>Bangladesh</fullName>
                </value>
                <value>
                    <fullName>Belarus</fullName>
                </value>
                <value>
                    <fullName>Belgium</fullName>
                </value>
                <value>
                    <fullName>Benin</fullName>
                </value>
                <value>
                    <fullName>Bosnia/Herzegov</fullName>
                </value>
                <value>
                    <fullName>Botswana</fullName>
                </value>
                <value>
                    <fullName>Bulgaria</fullName>
                </value>
                <value>
                    <fullName>Burkina Faso</fullName>
                </value>
                <value>
                    <fullName>Burundi</fullName>
                </value>
                <value>
                    <fullName>Cameroon</fullName>
                </value>
                <value>
                    <fullName>Central Africa</fullName>
                </value>
                <value>
                    <fullName>Chad</fullName>
                </value>
                <value>
                    <fullName>Congo</fullName>
                </value>
                <value>
                    <fullName>Croatia</fullName>
                </value>
                <value>
                    <fullName>Czech Republic</fullName>
                </value>
                <value>
                    <fullName>Denmark</fullName>
                </value>
                <value>
                    <fullName>Dominican Repub.</fullName>
                </value>
                <value>
                    <fullName>Egypt</fullName>
                </value>
                <value>
                    <fullName>Eritrea</fullName>
                </value>
                <value>
                    <fullName>Estonia</fullName>
                </value>
                <value>
                    <fullName>Ethiopia</fullName>
                </value>
            </valueSetDefinition>
        </valueSet>
    </fields>
    <fields>
        <fullName>Energy_Record_Id__c</fullName>
        <externalId>true</externalId>
        <label>Energy Record Id</label>
        <length>18</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>Market_Trend_Period__c</fullName>
        <label>Market Trend Period</label>
        <type>MultiselectPicklist</type>
        <valueSet>
            <valueSetDefinition>
                <value>
                    <fullName>Short term (Cur. and next quarter)</fullName>
                </value>
                <value>
                    <fullName>Medium term (Cur. and next FY)</fullName>
                </value>
                <value>
                    <fullName>Long term (next 5 years)</fullName>
                </value>
            </valueSetDefinition>
        </valueSet>
    </fields>
    <fields>
        <fullName>Market_Trend__c</fullName>
        <description>The positive or negative effect on the current fiscal year.</description>
        <inlineHelpText>Please enter a postive or negative number (eg 5%, -20%) showing the impact on our market.</inlineHelpText>
        <label>% effect on Market in current FY year</label>
        <precision>3</precision>
        <scale>0</scale>
        <type>Percent</type>
    </fields>
    <fields>
        <fullName>Product_Management__c</fullName>
        <label>Product Management</label>
        <referenceTo>Product_Management__c</referenceTo>
        <relationshipName>Markets_information</relationshipName>
        <relationshipOrder>0</relationshipOrder>
        <type>MasterDetail</type>
    </fields>
    <fields>
        <fullName>RSD__c</fullName>
        <description>RSD REgion</description>
        <label>RSD</label>
        <type>Picklist</type>
        <valueSet>
            <valueSetDefinition>
                <sorted>true</sorted>
                <value>
                    <fullName>Americas</fullName>
                </value>
                <value>
                    <fullName>ANZPAC</fullName>
                </value>
                <value>
                    <fullName>Asia</fullName>
                </value>
                <value>
                    <fullName>CIS/RUSSIA</fullName>
                </value>
                <value>
                    <fullName>GERMANY</fullName>
                </value>
                <value>
                    <fullName>INDIA</fullName>
                </value>
                <value>
                    <fullName>NORDIC</fullName>
                </value>
                <value>
                    <fullName>SOUTH EUROPE</fullName>
                </value>
                <value>
                    <fullName>UK/MEA</fullName>
                </value>
                <value>
                    <fullName>WEST EUROPE</fullName>
                </value>
            </valueSetDefinition>
        </valueSet>
    </fields>
    <fields>
        <fullName>RSM__c</fullName>
        <description>RSM Region</description>
        <label>RSM</label>
        <type>Picklist</type>
        <valueSet>
            <valueSetDefinition>
                <sorted>true</sorted>
                <value>
                    <fullName>AFRICA</fullName>
                </value>
                <value>
                    <fullName>AMERICA LATIN AMERICA</fullName>
                </value>
                <value>
                    <fullName>AMERICA NA INDUSTRIAL</fullName>
                </value>
                <value>
                    <fullName>AMERICA NA OEM</fullName>
                </value>
                <value>
                    <fullName>AMERICA NA UTILITY</fullName>
                </value>
                <value>
                    <fullName>AMERICA RETAIL</fullName>
                </value>
                <value>
                    <fullName>AUSTRALIA</fullName>
                </value>
                <value>
                    <fullName>BELGIUM/LUXEMBOURG</fullName>
                </value>
                <value>
                    <fullName>FRANCE</fullName>
                </value>
                <value>
                    <fullName>GERMANY</fullName>
                </value>
                <value>
                    <fullName>GERMANY AXICOM</fullName>
                </value>
                <value>
                    <fullName>GERMANY INDUSTRIAL</fullName>
                </value>
                <value>
                    <fullName>GERMANY UTILITY</fullName>
                </value>
                <value>
                    <fullName>GERMANY WHOLESALER</fullName>
                </value>
                <value>
                    <fullName>GULF, GREECE, PAKISTAN</fullName>
                </value>
                <value>
                    <fullName>INDIA</fullName>
                </value>
                <value>
                    <fullName>ISRAEL</fullName>
                </value>
                <value>
                    <fullName>ITALY</fullName>
                </value>
                <value>
                    <fullName>MAGHREB</fullName>
                </value>
                <value>
                    <fullName>MENA</fullName>
                </value>
                <value>
                    <fullName>MIDDLE EAST E.EQ.</fullName>
                </value>
                <value>
                    <fullName>NETHERLANDS</fullName>
                </value>
                <value>
                    <fullName>NEW ZEALAND</fullName>
                </value>
                <value>
                    <fullName>NORDIC &amp; BALTICS</fullName>
                </value>
                <value>
                    <fullName>RUSSIA &amp; CIS</fullName>
                </value>
                <value>
                    <fullName>SOUTH EUROPE</fullName>
                </value>
                <value>
                    <fullName>SPAIN/PORTUGAL</fullName>
                </value>
                <value>
                    <fullName>SWITZERLAND</fullName>
                </value>
                <value>
                    <fullName>TURKEY/IRAN</fullName>
                </value>
                <value>
                    <fullName>UK/IRELAND</fullName>
                </value>
            </valueSetDefinition>
        </valueSet>
    </fields>
    <fields>
        <fullName>Source_Information__c</fullName>
        <label>Source Information</label>
        <type>Picklist</type>
        <valueSet>
            <valueSetDefinition>
                <value>
                    <fullName>Competitors</fullName>
                </value>
                <value>
                    <fullName>Customers</fullName>
                </value>
                <value>
                    <fullName>Industrial Association</fullName>
                </value>
                <value>
                    <fullName>Press</fullName>
                </value>
                <value>
                    <fullName>Web</fullName>
                </value>
                <value>
                    <fullName>TV</fullName>
                </value>
                <value>
                    <fullName>TE market survey</fullName>
                </value>
                <value>
                    <fullName>Others</fullName>
                </value>
            </valueSetDefinition>
        </valueSet>
    </fields>
    <fields>
        <fullName>TE_Market_Share__c</fullName>
        <description>Te Market Share (estimated)</description>
        <inlineHelpText>Te Market Share (estimated)</inlineHelpText>
        <label>TE Market Share (current quarter)</label>
        <precision>2</precision>
        <scale>0</scale>
        <type>Percent</type>
    </fields>
    <fields>
        <fullName>TE_Sales_Quarter__c</fullName>
        <label>TE Sales (Quarter)</label>
        <precision>18</precision>
        <scale>0</scale>
        <type>Currency</type>
    </fields>
    <fields>
        <fullName>Web_site_source_information__c</fullName>
        <label>Web site source information</label>
        <type>Url</type>
    </fields>
    <label>Market Intelligence</label>
    <nameField>
        <label>Market Intelligence Name</label>
        <type>Text</type>
    </nameField>
    <pluralLabel>Market Intelligence</pluralLabel>
    <sharingModel>ControlledByParent</sharingModel>
</CustomObject>